--- a/css/feedback.css
+++ b/css/feedback.css
@@ -33,28 +33,43 @@ body {
 
 /* MAIN CSS */
 
-.popup-message {
-    display: none;
-    position: fixed;
-    top: 0;
-    right: 0;
-    margin: 20px;
-    background-color: rgb(12, 207, 12);
-    padding: 16px;
-    font-size: 20px;
-    border-radius: 6px;
-}
-
-.popup-message p {
-    text-shadow: 2px 2px 2px black;
-}
-
 .content {
     display: flex;
     text-align: center;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.navbar__button {
+    background-color: transparent;
+    border: 4px solid #ffffff69;
+    color: rgba(255, 255, 255, 0.75);
+    padding: 16px 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 35px;
+    cursor: pointer;
+    border-radius: 9999px;
+    transition: all 0.3s ease;
+}
+
+.navbar__button p {
+    display: none;
+}
+
+.navbar__button:hover {
+    background-color: rgba(255, 255, 255, 0.15);
 }
 
 .content .feedback {
