--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,37 @@ body {
     animation: fadeIn 3s ease forwards, moveUp 1s ease forwards;
 }
 
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.navbar__button {
+    background-color: transparent;
+    border: 4px solid #ffffff69;
+    color: rgba(255, 255, 255, 0.75);
+    padding: 16px 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 35px;
+    cursor: pointer;
+    border-radius: 9999px;
+    transition: all 0.3s ease;
+}
+
+.navbar__button p {
+    display: none;
+}
+
+.navbar__button:hover {
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
 .content img {
     -webkit-filter: invert(1);
     filter: progid:DXImageTransform.Microsoft.BasicImage(invert='1');
