--- a/css/tools.css
+++ b/css/tools.css
@@ -41,6 +41,37 @@ body {
     align-items: center;
 }
 
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.navbar__button {
+    background-color: transparent;
+    border: 4px solid #ffffff69;
+    color: rgba(255, 255, 255, 0.75);
+    padding: 16px 20px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 35px;
+    cursor: pointer;
+    border-radius: 9999px;
+    transition: all 0.3s ease;
+}
+
+.navbar__button p {
+    display: none;
+}
+
+.navbar__button:hover {
+    background-color: rgba(255, 255, 255, 0.15);
+}
+
 .content h3 {
     font-size: 45px;
     margin: 10px;
