--- a/css/index.css
+++ b/css/index.css
@@ -74,7 +74,7 @@ body {
     background-color: rgba(255, 255, 255, 0.15);
 }
 
-.content img {
+.content .discord {
     -webkit-filter: invert(1);
     filter: progid:DXImageTransform.Microsoft.BasicImage(invert='1');
     margin-bottom: -50px;
@@ -99,7 +99,7 @@ body {
     color: #fff;
 }
 
-.content button {
+.content .button {
     background-color: transparent;
     border: 4px solid #ffffff69;
     color: rgba(255, 255, 255, 0.75);
@@ -113,8 +113,26 @@ body {
     transition: all 0.3s ease;
 }
 
-.content button:hover {
+.content .button:hover {
     background-color: rgba(255, 255, 255, 0.15);
+}
+
+.content .kofi {
+    background-color: transparent;
+    border: 4px solid #FF5F5F;
+    color: rgba(255, 255, 255, 0.75);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    border-radius: 9999px;
+    transition: all 0.3s ease;
+}
+
+.content .kofi:hover {
+    background-color: rgba(255, 95, 95, 0.45);
 }
 
 .changelogs {
