--- a/css/games/eaglercraft.css
+++ b/css/games/eaglercraft.css
@@ -106,33 +106,26 @@ body {
     margin: 20px;
 }
 
-.content__games {
+.content .emulator-interface {
+    justify-content: center;
+    align-items: left;
+    text-align: left;
+    background-color: rgba(255, 255, 255, 0.05);
+    border-radius: 16px;
+    padding: 24px 32px;
+}
+
+.emulator-interface iframe {
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.emulator-interface h1 {
+    margin-bottom: 20px;
+}
+
+.emulator-interface .interface__column {
     display: flex;
     flex-direction: row;
-}
-
-.content__games .games__window {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    border-radius: 6px;
-    padding: 14px 7px;
-}
-
-.content__games .games__window:hover {
-    background-color: rgba(255, 255, 255, 0.15);
-    cursor: pointer;
-}
-
-.content__games .games__window:hover h1 {
-    text-decoration: underline;
-}
-
-.games__window img {
-    width: 50vh;
-    height: auto;
-    margin: 10px;
-    border-radius: 4px;
+    justify-content: space-between;
 }
