--- a/css/games.css
+++ b/css/games.css
@@ -119,6 +119,7 @@ body {
     background-color: transparent;
     border-radius: 6px;
     padding: 14px 7px;
+    transition: all 0.3s ease;
 }
 
 .content__games .games__window:hover {
